# Music_Cool

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES_2.0.0.md  requirements.txt
packaging/installers/: create_appimage.sh  create_dmg.sh  create_windows_installer.py
packaging/pyinstaller/: spec_linux.spec  spec_macos.spec  spec_windows.spec
scripts/: run_only.ps1
scripts/develop/: build_and_run.ps1  build_and_run.sh  build_only.ps1  build_only.sh  run_only.ps1  run_only.sh
src/: main.cpp
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/frontend/src/: main.tsx  styles.css
src-tauri/frontend/src/pages/: App.tsx  ImportPage.tsx  LibraryPage.tsx  SettingsPage.tsx
src-tauri/frontend/src/ui/: Sidebar.tsx
src-tauri/src/: main.rs
src-tauri/src/decoder/: ffi.rs  mod.rs  wrapper.rs
src-tauri/src/importer/: mod.rs  rsync_like.rs  task_manager.rs
src/cpp/: CMakeLists.txt  mingw_compat.cpp  python_binding.cpp
src/cpp/decoder/: ncm_decoder.cpp  ncm_decoder.h  ncm_decoder_c_api.cpp  ncm_decoder_c_api.h  thread_pool.h
src/python/: decoder_wrapper.py  main.py
src/python/gui/: file_tree_widget.py  i18n_manager.py  main_app.py  main_window.py  progress_widget.py  settings_dialog.py  sidebar_widget.py  theme_manager.py
src/python/gui/screens/: __init__.py  files_screen.py  logs_screen.py  main_screen.py  settings_screen.py
src/python/gui/widgets/: __init__.py  card.py  clash_button.py  navigation.py  progress_widget.py  section_header.py
