[package]
name = "music-cool-app"
version = "0.1.0"
edition = "2021"

description = "Music_Cool 桌面应用（Tauri + Rust + Web 前端）"
authors = ["Music_Cool"]

[build-dependencies]
tauri-build = { version = "1", features = [] }
cc = "1"

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "shell-open", "dialog", "fs-read-dir", "fs-read-file"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
walkdir = "2"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
lofty = "0.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]




